# RosettaCodeData

./: .gitignore
Task/ASCII-art-diagram-converter/C++/: CMakeLists.txt  ascii-art-diagram-converter.cpp
Task/Deepcopy/C++/: CMakeLists.txt  deepcopy.cpp
Task/Dining-philosophers/C++/: CMakeLists.txt
Task/Elliptic-curve-arithmetic/C++/: CMakeLists.txt  elliptic-curve-arithmetic.cpp
Task/Fixed-associative-map/C++/: CMakeLists.txt  fixed-associative-map.cpp
Task/Implicit-type-conversion/C++/: CMakeLists.txt  implicit-type-conversion.cpp
Task/Jump-anywhere/C++/: CMakeLists.txt  jump-anywhere.cpp
Task/Merge-and-aggregate-datasets/C++/: CMakeLists.txt  merge-and-aggregate-datasets.cpp
Task/Nested-templated-data/C++/: CMakeLists.txt  nested-templated-data.cpp
Task/Order-by-pair-comparisons/C++/: CMakeLists.txt  order-by-pair-comparison.cpp
Task/Tree-from-nesting-levels/C++/: CMakeLists.txt  tree-from-nesting-levels.cpp
Task/Tree-from-nesting-levels/Guile/: tree-from-nesting-levels.scm
